src/objects/Activitiy_Line_Item__c/Activitiy_Line_Item__c.object-meta.xml
<CustomObject>
    <label>User Status</label>
    <nameField>
        <displayFormat>US-{0000}</displayFormat>
        <label>User Status Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>