src/objects/Activitiy_Line_Item__c/fields/CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CaseNumber__c</fullName>
    <formula>Case__r.CaseNumber</formula>
    <label>CaseNumber</label>
    <type>Text</type>
</CustomField>