src/objects/Activitiy_Line_Item__c/fields/ChangeNumber__c.field-meta.xml
<CustomField>
    <fullName>ChangeNumber__c</fullName>
    <label>ChangeNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>