src/objects/Activitiy_Line_Item__c/fields/Notification_Number__c.field-meta.xml
<CustomField>
    <fullName>Notification_Number__c</fullName>
    <formula>IF( Case__c != null, Case__r.Repair_Notification_Number__c , IF( Task_Activities__c != null, Task_Activities__r.RelatedTo__r.Repair_Notification_Number__c , null) )</formula>
    <label>Notification Number</label>
    <type>Text</type>
</CustomField>