src/objects/Activitiy_Line_Item__c/fields/SAPUserStatusObjectNumber__c.field-meta.xml
<CustomField>
    <fullName>SAPUserStatusObjectNumber__c</fullName>
    <label>SAPUserStatusObjectNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>