src/objects/Activitiy_Line_Item__c/fields/Task_Activities__c.field-meta.xml
<CustomField>
    <fullName>Task_Activities__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Activities</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Case__c</field>
            <operation>equals</operation>
            <valueField>Z_Task__c.RelatedTo__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Z_Task__c</referenceTo>
    <relationshipLabel>User Status</relationshipLabel>
    <relationshipName>Activitiy_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>