src/objects/Activitiy_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Description__c</columns>
    <columns>Email_Status__c</columns>
    <columns>Name__c</columns>
    <columns>SAPUserStatusObjectNumber__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>